--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   }
